--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Projeto Faculdade</title>
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="./">Home</a></li>
+        <li><a href="../client">Clientes</a></li>
+        <li><a href="../register">Registrar Usuario</a></li>
+        <li><a href="../news">Notícias</a></li>
+        <li><a href="../provider">Fornecedores</a></li>
+        <li><a href="../provider/register">Registrar Fornecedores</a></li>
+      </ul>
+    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
