--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         <li><a href="../client">Clientes</a></li>
         <li><a href="../register">Registrar Usuario</a></li>
         <li><a href="../news">Notícias</a></li>
+        <li><a href="../news/register">Registrar Notícias</a></li>
         <li><a href="../provider">Fornecedores</a></li>
         <li><a href="../provider/register">Registrar Fornecedores</a></li>
       </ul>
